# VidGenerator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  Procfile  README.md  SAAS_PROCESSING_MODEL.md  SAAS_ROADMAP.md  SELF_HOST_GUIDE.md  VPS_DEPLOYMENT.md  YOUTUBE_SETUP_GUIDE.md  auth.py  desktop_app.py  models.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  saas_starter_checklist.md  test_multiuser.py  web_app.py  web_app_minimal.py  web_app_multiuser.py
app/: captions.py  video.py  youtube_uploader.py
app/tts/: tiktok.py
examples/: README.md  sample_texts.csv  sample_texts.txt
instance/: tts_saas.db
scripts/: reset_youtube_integration.py  setup_youtube_credentials.py  test_youtube_integration.py
static/css/: style.css
static/js/: app.js  bg_brains.js  dashboard.js  rewarded_ads.js
templates/: _components.html  _dashboard_brain_blender.html  _dashboard_profile.html  _dashboard_shop.html  admin.html  base.html  dashboard.html  index.html  login.html  register.html  shop.html  support.html
