[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-shorts-generator"
version = "1.0.0"
description = "AI-powered short video generator with TTS and automated YouTube uploads"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TTS Shorts Generator Contributors"},
]
keywords = ["tts", "video", "youtube", "shorts", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Content Creators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "moviepy>=1.0.3",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "Pillow>=10,<12",
    "faster-whisper>=1.0.3",
    "Flask>=2.3.0",
    "pywebview>=4.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tts-shorts-generator"
Repository = "https://github.com/yourusername/tts-shorts-generator"
Issues = "https://github.com/yourusername/tts-shorts-generator/issues"

[project.scripts]
tts-shorts = "run:main"
tts-shorts-web = "web_app:main"
tts-shorts-desktop = "desktop_app:main"

[tool.setuptools]
packages = ["app", "app.tts"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | temp
  | export
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "moviepy.*",
    "pywebview.*",
    "faster_whisper.*",
]
ignore_missing_imports = true
